More Sonar cleanup